--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -7,6 +7,7 @@ item.fbiomes.MithrilDust.name=Mithril Dust
 item.fbiomes.StarSilverNugget.name=Star-Silver Nugget
 item.fbiomes.StarSilverIngot.name=Star-Silver Ingot
 item.fbiomes.StarSilverDust.name=Star-Silver Dust
+item.fbiomse.elderwood_boat.name=Elderwood Boat
 
 tile.fbiomes.Mud.name=Mud
 tile.fbiomes.Peat.name=Peat
@@ -37,6 +38,17 @@ tile.fbiomes.BigMushroomStemGreen.name=Green Mushroom Stem
 tile.fbiomes.BigMushroomStemPurple.name=Purple Mushroom Stem
 tile.fbiomes.BigMushroomSpotGreen.name=Green Mushroom Spot
 tile.fbiomes.BigMushroomSpotPurple.name=Purple Mushroom Spot
+tile.fbiomes.elderwood_planks.name=Elderwood Planks
+tile.fbiomes.elderwood_log.name=Elderwood Log
+tile.fbiomes.elderwood.name=Elderwood
+tile.fbiomes.elderwood_leaves.name=Elderwood Leaves
+tile.fbiomes.elderwood_sapling.name=Elderwood Sapling
+tile.fbiomes.elderwood_stairs.name=Elderwood Stairs
+tile.fbiomes.elderwood_slab.name=Elderwood Slab
+tile.fbiomes.elderwood_fence.name=Elderwood Fence
+tile.fbiomes.elderwood_fence_gate.name=Elderwood Fence Gate
+tile.fbiomes.elderwood_door.name=Elderwood Door
+tile.fbiomes.elderwood_trapdoor.name=Elderwood Trapdoor
 
 material.fbiomes.mithril.name=Mithril
 material.fbiomes.star_silver.name=Star-Silver
