--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -14,6 +14,7 @@ tile.fbiomes.mud.name=Mud
 tile.fbiomes.peat.name=Peat
 tile.fbiomes.loose_rock.name=Loose Rock
 tile.fbiomes.roots.name=Roots
+tile.fbiomes.lichen.name=Lichen
 tile.fbiomes.brambles.name=Bramble Bush
 
 tile.fbiomes.toadstool.name=Toadstool
