--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -71,6 +71,7 @@ tile.fbiomes.gnarlwillow_fence.name=Gnarlwillow Fence
 tile.fbiomes.gnarlwillow_fence_gate.name=Gnarlwillow Fence Gate
 tile.fbiomes.gnarlwillow_door.name=Gnarlwillow Door
 tile.fbiomes.gnarlwillow_trapdoor.name=Gnarlwillow Trapdoor
+tile.fbiomes.twisted_gnarlwillow.name=Twisted Gnarlwillow
 
 tile.fbiomes.pine_planks.name=Pine Planks
 tile.fbiomes.pine_log.name=Pine Wood
