switch orange glowshrooms to yellow

--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -22,19 +22,19 @@ tile.fbiomes.purple_mushroom.name=Purple Mushroom
 tile.fbiomes.green_mushroom.name=Green Mushroom
 tile.fbiomes.blue_glowshroom.name=Blue Glowshroom
 tile.fbiomes.green_glowshroom.name=Green Glowshroom
-tile.fbiomes.orange_glowshroom.name=Orange Glowshroom
+tile.fbiomes.yellow_glowshroom.name=Yellow Glowshroom
 tile.fbiomes.pink_glowshroom.name=Pink Glowshroom
 tile.fbiomes.purple_glowshroom.name=Purple Glowshroom
 
 tile.fbiomes.big_blue_glowshroom_cap.name=Blue Glowshroom Cap
 tile.fbiomes.big_green_glowshroom_cap.name=Green Glowshroom Cap
-tile.fbiomes.big_orange_glowshroom_cap.name=Orange Glowshroom Cap
+tile.fbiomes.big_yellow_glowshroom_cap.name=Yellow Glowshroom Cap
 tile.fbiomes.big_pink_glowshroom_cap.name=Pink Glowshroom Cap
 tile.fbiomes.big_purple_glowshroom_cap.name=Purple Glowshroom Cap
 
 tile.fbiomes.big_blue_glowshroom_stem.name=Blue Glowshroom Stem
 tile.fbiomes.big_green_glowshroom_stem.name=Green Glowshroom Stem
-tile.fbiomes.big_orange_glowshroom_stem.name=Orange Glowshroom Stem
+tile.fbiomes.big_yellow_glowshroom_stem.name=Yellow Glowshroom Stem
 tile.fbiomes.big_pink_glowshroom_stem.name=Pink Glowshroom Stem
 tile.fbiomes.big_purple_glowshroom_stem.name=Purple Glowshroom Stem
 
