--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -15,6 +15,8 @@ item.fbiomes.gnarlwillow_door.name=Gnarlwillow Door
 
 tile.fbiomes.mud.name=Mud
 tile.fbiomes.peat.name=Peat
+tile.fbiomes.grassy_mud.name=Grassy Mud
+tile.fbiomes.grassy_peat.name=Grassy Peat
 tile.fbiomes.loose_rock.name=Loose Rock
 tile.fbiomes.roots.name=Roots
 tile.fbiomes.lichen.name=Lichen
@@ -28,6 +30,7 @@ tile.fbiomes.green_glowshroom.name=Green Glowshroom
 tile.fbiomes.yellow_glowshroom.name=Yellow Glowshroom
 tile.fbiomes.pink_glowshroom.name=Pink Glowshroom
 tile.fbiomes.purple_glowshroom.name=Purple Glowshroom
+tile.fbiomes.shelf_mushroom.name=Shelf Mushroom
 
 tile.fbiomes.big_blue_glowshroom_cap.name=Blue Glowshroom Cap
 tile.fbiomes.big_green_glowshroom_cap.name=Green Glowshroom Cap
