--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -14,6 +14,7 @@ item.fbiomes.gnarlwillow_door.name=Gnarlwillow Door
 
 item.fbiomes.pixie_bottle.name=Bottled Pixie
 item.fbiomes.pixie_bottle.tooltip.variant=Variant: %1$s
+item.fbiomes.pixie_bottle.tooltip.health=Health: %1$s/%2$s
 
 tile.fbiomes.mud.name=Mud
 tile.fbiomes.peat.name=Peat
