--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -103,8 +103,9 @@ tile.fbiomes.gnarled_vine.name=Gnarled Vines
 
 tile.fbiomes.web_cover.name=Web Cover
 
-tile.fbiomes.pixie_table.name=Mystic Stump
-tile.fbiomes.pixie_table_child.name=Mystic Stump
+tile.fbiomes.mystic_stump.name=Mystic Stump
+tile.fbiomes.mystic_stump_houses.name=Pixie Workshop
+tile.fbiomes.mystic_stump_part.name=Mystic Stump
 
 material.fbiomes.mithril.name=Mithril
 material.fbiomes.star_silver.name=Star-Silver
