add natural mystic stumps

--- a/src/main/resources/assets/fbiomes/lang/en_us.lang
+++ b/src/main/resources/assets/fbiomes/lang/en_us.lang
@@ -131,6 +131,7 @@ entity.fbiomes.pixie.variant.marbled=§eMarbled
 entity.fbiomes.pixie.variant.hairstreak=§eHairstreak
 entity.fbiomes.pixie.variant.sunset=§bSunset
 entity.fbiomes.pixie.variant.malachite=§bMalachite
+entity.fbiomes.pixie.variant.glasswing=§bGlasswing
 
 jei.category.fbiomes.pixie_table_food=Pixie Workshop Food
 
